--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<body>
-  <p>website wawowaoeowaeoawo</p>
-</body>
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <p>website wawowaoeowaeoawo</p>
+  </body>
+</html>
