--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>website for softlock studios</p>
+    <p>website for softlock studios lol</p>
     <p>Copyright © Softlock Studios Ltd. 2025</p>
   </body>
 </html>
