Co-authored-by: Felix <alrgie@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="woah">
-      <p>asdasdasdas</p>
+    <div class="Main">
+      <div class="BackgroundImage">
+        <img id="bigimage" src="/Images/xptoadd.png" alt="">
+      </div>
+      <div >
+
+      </div>
     </div>
 
     <p>website for softlock studios lol</p>
