about + index changes

--- a/about.html
+++ b/about.html
@@ -6,5 +6,7 @@
         <p class="AboutHeader">
             About us
         </p>
+        <p>
+            Softlock studios is founded by 
     </body>
 </html>
