--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="Main">
+    <div class="FirstThing">
       <div class="BackgroundImage">
         <img id="bigimage" src="/Images/xptoadd.png" alt="">
-      </div>
-      <div >
-
       </div>
     </div>
 
